--- a/hackathon2019/assets/scss/blk-design-system.css
+++ b/hackathon2019/assets/scss/blk-design-system.css
@@ -12605,8 +12605,8 @@ hr {
   color: #496619; }
 
 .section {
-  padding: 70px 0;
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
   .section .row + .category {
     margin-top: 15px; }
   .section .carousel {
